# advent-of-code

./: .clang-format  .gitignore  .gitmodules  BACKLOG.md  CMakeLists.txt  README.md
include/: AoCYears.hpp
include/2015/: AoCYear2015.hpp  Day01.hpp  Day02.hpp  Day03.hpp  Day04.hpp  Day05.hpp  Day06.hpp  Day07.hpp  Day08.hpp  Day09.hpp  Day10.hpp  Day11.hpp  Day12.hpp  Day13.hpp  Day14.hpp  Day15.hpp  Day16.hpp  Day17.hpp  Day18.hpp  Day19.hpp  Day20.hpp  Day21.hpp  Day22.hpp  Day23.hpp  Day24.hpp  Day25.hpp
include/2016/: AoCYear2016.hpp  Day01.hpp  Day02.hpp  Day03.hpp  Day04.hpp  Day05.hpp  Day06.hpp  Day07.hpp  Day08.hpp  Day09.hpp  Day10.hpp  Day11.hpp  Day12.hpp  Day13.hpp  Day14.hpp  Day15.hpp  Day16.hpp  Day17.hpp  Day18.hpp  Day19.hpp  Day20.hpp  Day21.hpp  Day22.hpp  Day23.hpp  Day24.hpp  Day25.hpp
include/2024/: AoCYear2024.hpp  Day01.hpp  Day02.hpp  Day03.hpp  Day04.hpp  Day05.hpp  Day06.hpp  Day07.hpp  Day08.hpp  Day09.hpp  Day10.hpp  Day11.hpp  Day12.hpp  Day13.hpp  Day14.hpp  Day15.hpp  Day16.hpp  Day17.hpp  Day18.hpp  Day19.hpp  Day20.hpp  Day21.hpp  Day22.hpp  Day23.hpp  Day24.hpp  Day25.hpp
lib/coll-aoc-runner/: CMakeLists.txt
lib/coll-aoc-runner/include/coll-aoc-runner/: AoCCookie.hpp  AoCDay.hpp  AoCException.hpp  AoCIO.hpp  AoCInput.hpp  AoCRunner.hpp  AoCSelector.hpp  AoCStructs.hpp  AoCSubmitter.hpp  AoCYear.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/algorithms/: Dijkstras.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/cache/: AoCCache.hpp  AoCLocalCache.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/crypto/: MD5.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/math/: Math.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/parallelism/: ThreadPool.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/strings/: Format.hpp
lib/coll-aoc-runner/include/coll-aoc-runner/structs/: Direction.hpp  Grid.hpp  Vector2.hpp
lib/coll-aoc-runner/src/: AoCCookie.cpp  AoCDay.cpp  AoCIO.cpp  AoCInput.cpp  AoCRunner.cpp  AoCSubmitter.cpp  AoCYear.cpp
lib/coll-aoc-runner/src/cache/: AoCCache.cpp  AoCLocalCache.cpp
lib/coll-aoc-runner/src/strings/: Format.cpp
lib/coll-aoc-runner/src/structs/: Direction.cpp
script/: build.sh  create_year.sh  run.sh
script/template/: AoCYear.hpp  Day.cpp  Day.hpp
src/: main.cpp
src/2015/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp
src/2016/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp
src/2024/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp
